feat: Fix installApp response body
